--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -71,4 +71,77 @@ body {
 
 .hidden {
   display: none;
+} */
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  :root {
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --foreground-rgb: 255, 255, 255;
+      --background-start-rgb: 0, 0, 0;
+      --background-end-rgb: 0, 0, 0;
+    }
+  }
+
+  body {
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+        to bottom,
+        transparent,
+        rgb(var(--background-end-rgb))
+      )
+      rgb(var(--background-start-rgb));
+  }
+
+  .editor-container {
+    @apply flex flex-col h-screen;
+  }
+
+  .editor-tabs {
+    @apply flex border-b border-gray-300 bg-gray-200 p-2;
+  }
+
+  .editor-tabs button {
+    @apply mr-4 p-2 cursor-pointer bg-blue-500 text-white border-none rounded;
+  }
+
+  .code-editor,
+  .output-screen {
+    @apply border border-gray-300;
+  }
+
+  @media (min-width: 768px) {
+    .code-editor,
+    .output-screen {
+      @apply w-1/2 h-full;
+    }
+
+    .code-editor {
+      @apply h-screen;
+    }
+
+    .output-screen {
+      @apply h-screen;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .code-editor {
+      height: 700px;
+    }
+
+    .output-screen {
+      height: 700px;
+    }
+  }
 }
